src/test/ui/terminal-width/whitespace-trimming-2.stderr
error[E0308]: mismatched types
  --> $DIR/whitespace-trimming-2.rs:4:187
   |
LL | ...-> usize {
   |       ----- expected `usize` because of return type
LL | ...                                                                                                                                                                                 ()
   |                                                                                                                                                                                     ^^ expected usize, found ()
   |
   = note: expected type `usize`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
