src/test/ui/terminal-width/whitespace-trimming-2.rs
// ignore-tidy-length 

fn foo() -> usize {
                                                                                                                                                                                          ()
//~^ ERROR mismatched types
}

fn main() {}
